Remove overflow rules to prevent container scrolling
Page scrolling is nicer and more predictable

--- a/airbyte-webapp/src/components/MainPageWithScroll/MainPageWithScroll.module.scss
+++ b/airbyte-webapp/src/components/MainPageWithScroll/MainPageWithScroll.module.scss
@@ -1,20 +1,10 @@
 @use "../../scss/variables";
 
 .page {
-  overflow-y: hidden;
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.contentContainer {
-  max-width: 100%;
-  overflow-x: auto;
-}
-
 .content {
-  overflow-y: auto;
-  height: 100%;
   padding: variables.$spacing-lg variables.$spacing-xl variables.$spacing-page-bottom variables.$spacing-xl;
 }
